tests/compile_fail/resolver_partial_resolution.stderr
error: Unresolvable definition "undefined".
  --> tests/compile_fail/resolver_partial_resolution.rs:13:11
   |
13 |     unit (undefined, "u") = undefined,
   |           ^^^^^^^^^
   |
   = help: Remove recursive definitions.
